@@ -2,6 +2,16 @@
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_tab):
+	I guess I've fixed #475291 :)
+	
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_extension):
+	Just intend and changed order of a switch
+
+2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_tab):
 	Using switch
 
 2007-11-05  Benjamin Berg  <benjamin@sipsolutions.net>
